[gd_scene load_steps=3 format=3 uid="uid://cplec8vnuoeeu"]

[ext_resource type="Theme" uid="uid://uj5socmwxcml" path="res://Main/Theme/my_theme.tres" id="1_5ex3f"]
[ext_resource type="Script" path="res://Main/Classes/Button/my_button.gd" id="1_btbsj"]

[node name="MyButton" type="Button"]
custom_minimum_size = Vector2(16, 16)
pivot_offset = Vector2(8, 8)
theme = ExtResource("1_5ex3f")
script = ExtResource("1_btbsj")

[node name="TextureRect_Texture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
